--- a/index.html
+++ b/index.html
@@ -653,6 +653,8 @@
     <script src="js/ui/font-toggle.js"></script>
     <script src="js/ui/scroll-to-top-page.js"></script>
     <script src="js/formatter/number-formatter.js"></script>
+    <script src="js/formatter/text-formatter.js"></script>
+    <script src="js/formatter/quantity-formatter.js"></script>
     <script src="js/formatter/date-formatter.js"></script>
     <script src="js/core/food-composition-table.js"></script>
     <script src="js/core/seuils-imc-enfants.js"></script>
